--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <h2>Tattoo House</h2>
+          <h2>W i l k i n d</h2>
         </div>
 
         <nav>
           <ul id="menuitem">
             <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="index.html">ABOUT</a></li>
-            <li><a href="contact.html">GALLERY</a></li>
-            <li><a href="account.html">TESTIMONIAL</a></li>
-            <li><a href="account.html">SERVICES</a></li>
-            <i class="fa fa-search"></i>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="gallary.html">GALLERY</a></li>
+            <!-- <li><a href="account.html">TESTIMONIAL</a></li> -->
+            <li><a href="#services">SERVICES</a></li>
+            <!-- <i class="fa fa-search"></i> -->
           </ul>
         </nav>
         <span class="fa fa-bars" onclick="menutoggle()"></span>
@@ -75,7 +75,7 @@
 
 
   <section class="about">
-    <div class="container">
+    <div class="container"  id="services">
       <h2>What We Do</h2>
       <div class="grid">
         <div class="item">
@@ -125,7 +125,7 @@
         </div>
       </div>
 
-      <div class="content flex">
+      <div class="content flex"  id="about">
         <div class="left">
           <div class="img">
             <img src="image/a.png" alt="">
@@ -226,7 +226,7 @@
       </div>
 
       <div class="grid">
-        <div class="item">
+        <div class="item" >
           <h2>About</h2>
           <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
