--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <h2>W i l k i n d</h2>
+          <!-- <h2>W i l k i n d</h2> -->
+          <div class="logo-image">
+            <img src="image/h.png" alt="">
+          </div>
+          <div class="logo-name">
+            <h2>Welkin Tattoos</h2>
+          </div>
         </div>
 
         <nav>
           <ul id="menuitem">
-            <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="gallary.html">GALLERY</a></li>
-            <!-- <li><a href="account.html">TESTIMONIAL</a></li> -->
-            <li><a href="#services">SERVICES</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gall">Gallery</a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="account.html">Contact</a></li>
+
             <!-- <i class="fa fa-search"></i> -->
           </ul>
         </nav>
@@ -34,13 +41,21 @@
       <div class="home flex">
         <div class="left">
           <h2>Best Tattoos</h2>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button>Read More</button>
-          <div class="dots flex">
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
+
+          <p id="text1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus corporis dolorem distinctio at
+            officiis
+            esse minima, velit nisi accusamus quas quibusdam saepe quos cumque ad cum dolore. Dolore vitae, et est qui
+            numquam hic eos at, minima quos neque id.</p>
+
+          <button id="btn1" onclick="toggle1()">Read More</button>
+          <!-- <div class="dots flex">
             <label></label>
             <label></label>
             <label></label>
-          </div>
+          </div> -->
         </div>
         <div class="right">
           <div class="img">
@@ -67,7 +82,7 @@
       }
     }
 
-    window.addEventListener("scroll", function() {
+    window.addEventListener("scroll", function () {
       var header = document.querySelector("header");
       header.classList.toggle("sticky", window.scrollY > 0);
     })
@@ -75,13 +90,15 @@
 
 
   <section class="about">
-    <div class="container"  id="services">
+    <div class="container" id="services">
       <h2>What We Do</h2>
       <div class="grid">
         <div class="item">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;">
-            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-              text-anchor="none" style="mix-blend-mode: normal">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172"
+            style=" fill:#000000;">
+            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+              stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+              font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
               <path d="M0,172v-172h172v172z" fill="none"></path>
               <g fill="#0e6c66">
                 <path
@@ -91,12 +108,16 @@
             </g>
           </svg>
           <h2>Tattooing</h2>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
         </div>
         <div class="item">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 172 172" style=" fill:#000000;">
-            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-              text-anchor="none" style="mix-blend-mode: normal">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 172 172"
+            style=" fill:#000000;">
+            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+              stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+              font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
               <path d="M0,172v-172h172v172z" fill="none"></path>
               <g fill="#0e6c66">
                 <path
@@ -106,12 +127,16 @@
             </g>
           </svg>
           <h2>Piercing</h2>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
         </div>
         <div class="item">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 172 172" style=" fill:#000000;">
-            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-              text-anchor="none" style="mix-blend-mode: normal">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 172 172"
+            style=" fill:#000000;">
+            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+              stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+              font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
               <path d="M0,172v-172h172v172z" fill="none"></path>
               <g fill="#0e6c66">
                 <path
@@ -121,11 +146,13 @@
             </g>
           </svg>
           <h2>Tattoo Design </h2>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
         </div>
       </div>
 
-      <div class="content flex"  id="about">
+      <div class="content flex" id="about">
         <div class="left">
           <div class="img">
             <img src="image/a.png" alt="">
@@ -133,15 +160,23 @@
         </div>
         <div class="right">
           <h2>About Us</h2>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button type="button" name="button">Read More</button>
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
+          <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vitae a adipisci assumenda est nulla
+            provident quibusdam quidem, molestias aspernatur velit. Ducimus aspernatur quae iste tenetur odit nam, quas
+            reprehenderit eligendi id, earum voluptas expedita laborum ex dolorem eius excepturi adipisci quo esse
+            assumenda ad iure sapiente voluptatem quidem nobis!</p>
+
+          <button id="btn2" onclick="toggle2()">Read More</button>
+
         </div>
       </div>
     </div>
   </section>
 
 
-  <section class="gallery">
+  <section class="gallery" id="gall">
     <h2>Our Tattoo Gallery </h2>
     <div class="image">
       <div class="img img_item1">
@@ -172,8 +207,12 @@
       <div class="items grid">
         <div class="box">
           <div class="para">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.</p>
           </div>
           <div class="image flex ">
             <div class="img">
@@ -187,8 +226,12 @@
         </div>
         <div class="box">
           <div class="para">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.</p>
           </div>
           <div class="image flex ">
             <div class="img">
@@ -226,9 +269,10 @@
       </div>
 
       <div class="grid">
-        <div class="item" >
+        <div class="item">
           <h2>About</h2>
-          <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
         </div>
         <div class="item">
           <h2>Instagram</h2>
@@ -258,7 +302,11 @@
       </div>
     </div>
   </footer>
-  <p class="legal">Copyright (c) 2021 Copyright Holder All Rights Reserved | This template is made by <i class="fa fa-heart"></i> Dot Studio </p>
+  <p class="legal">Copyright (c) 2021 Copyright Holder All Rights Reserved | This template is made by <i
+      class="fa fa-heart"></i> Dot Studio </p>
+
+
+  <script src="./js/toogle.js"></script>
 </body>
 
 </html>
