--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo">
           <!-- <h2>W i l k i n d</h2> -->
           <div class="logo-image">
-            <img src="image/h.png" alt="">
+            <img src="image/logo-image.png" alt="">
           </div>
           <div class="logo-name">
             <h2>Welkin Tattoos</h2>
@@ -251,13 +251,8 @@
     <div class="container">
       <div class="content flex">
         <div class="left">
-          <div class="top flex">
-            <div class="input">
-              <input type="text" placeholder="Enter your email">
-            </div>
-            <div class="arrow">
-              <i class="fa fa-paper-plane"></i>
-            </div>
+          <div class="top flex" id="tagline">
+             <h2>Ascend to Artistry with Welkin Tattoos</h2>
           </div>
         </div>
         <div class="right">
@@ -269,12 +264,23 @@
       </div>
 
       <div class="grid">
+
+
+        <div class="item">
+          <h2>Contact Developers</h2>
+          <i class="fa fa-phone"></i>
+          <label>Call +01 123456987</label><br><br>
+          <i class="fa fa-envelope"></i>
+          <label>yourmail@.com</label>
+        </div>
+
+
         <div class="item">
           <h2>About</h2>
           <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
             laborum.</p>
         </div>
-        <div class="item">
+        <!-- <div class="item">
           <h2>Instagram</h2>
           <div class="box flex">
             <img src="image/i2.jpeg">
@@ -284,7 +290,8 @@
             <img src="image/i4.jpeg">
             <p>Excepteur sint occaecat cupidatat</p>
           </div>
-        </div>
+        </div> -->
+
         <div class="item">
           <h2>Contact Us</h2>
           <i class="fa fa-map"></i>
@@ -294,16 +301,27 @@
           <i class="fa fa-envelope"></i>
           <label>yourmail@.com</label>
         </div>
-        <div class="item">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56482.28235940186!2d85.29363651901193!3d27.774578537470312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb1ec025757983%3A0x31e21a2803752ce9!2z4KSf4KWL4KSW4KS-!5e0!3m2!1sne!2snp!4v1626886843762!5m2!1sne!2snp"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <!-- margin-inline: auto; -->
+        <div class="item " id="lastbox" >
+          <div class="footer-logo">
+            <img src="image/logo-image.png" alt="">
+          </div>
+          <div class="footer-item">
+            <ul id="menuitem2">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#gall">Gallery</a></li>
+              <li><a href="#services">services</a></li>
+              <li><a href="account.html">Contact</a></li>
+  
+              <!-- <i class="fa fa-search"></i> -->
+            </ul>
+          </div>
         </div>
+        
       </div>
     </div>
   </footer>
-  <p class="legal">Copyright (c) 2021 Copyright Holder All Rights Reserved | This template is made by <i
-      class="fa fa-heart"></i> Dot Studio </p>
 
 
   <script src="./js/toogle.js"></script>
