cards sahi kar diya

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"> 
@@ -38,7 +40,10 @@
           </ul>
         </nav>
         <!-- <span class="fa fa-bars" onclick="menutoggle()"></span> -->
-        <span class="bi bi-bars" onclick="menutoggle()" ></span>
+        <!-- <span  class="fa fa-navicon"onclick="menutoggle()"></span> -->
+        <span  class="glyphicon glyphicon-menu-hamburger" onclick="menutoggle()"></span>
+        
+        <!-- <span class="bi bi-bars" onclick="menutoggle()" ></span> -->
         
       </div>
 
